--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 		<title>BeatsintheCloud</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="https://dd3q6y43lte2b.cloudfront.net/assets/css/main.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+		<noscript><link rel="stylesheet" href="https://dd3q6y43lte2b.cloudfront.net/assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
@@ -50,7 +51,7 @@
 							<p>One of my missions is to bring knowledge of cloud-native computing to the underprivileged, including Latino/a/e people globally and to minorities in the USA, as it is a field where we can step up and make a difference due to the lack of standardized education.</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fit"><img src="https://dd3q6y43lte2b.cloudfront.net/images/pic01.jpg" alt="" /></span>
 						</div>
 					</div>
 				</div>
@@ -93,7 +94,7 @@
 					<p>Because it was too complicated to explain to my kids exactly what I did.</p>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
+							<span class="image fit"><img src="https://dd3q6y43lte2b.cloudfront.net/images/pic02.jpg" alt="" /></span>
 							<h3>Made for Children</h3>
 							<p>Cloud computing and Containers made simple. The focus was to make these books feel like Kubernetes explained, but ELI5. You'll get it, and they'll love it.</p>
 							<ul class="actions special">
@@ -101,7 +102,7 @@
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
+							<span class="image fit"><img src="https://dd3q6y43lte2b.cloudfront.net/images/pic03.jpg" alt="" /></span>
 							<h3>Fun and Quirky</h3>
 							<p>There's action, adventure, magic, humor, and learning. These stories will spark curiosity and inspire the next generation of engineers and cloud-native heroes!</p>
 							<ul class="actions special">
@@ -109,7 +110,7 @@
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<span class="image fit"><img src="https://dd3q6y43lte2b.cloudfront.net/images/pic04.jpg" alt="" /></span>
 							<h3>Open Source</h3>
 							<p>Published under CC-BY 4.0, using CNCF-owned characters in conjunction with my original characters, but I would love to see your takes on them. Just give attribution.</p>
 							<ul class="actions special">
@@ -128,7 +129,7 @@
 					<p>Learn about cloud and cloud native while having fun</p>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic07.jpg" alt="" /></span>
+							<span class="image fit"><img src="https://dd3q6y43lte2b.cloudfront.net/images/pic07.jpg" alt="" /></span>
 							<h3>BeatsintheCloud</h3>
 							<p>Youtube channel. My own beats, but using tools like Google Cloud TTS, AWS Polly, AWS Lambda</p>
 							<ul class="actions special">
@@ -136,7 +137,7 @@
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic09.jpg" alt="" /></span>
+							<span class="image fit"><img src="https://dd3q6y43lte2b.cloudfront.net/images/pic09.jpg" alt="" /></span>
 							<h3>Learning Resources</h3>
 							<p>Collected courses, tutorials, videos about containers, kubernetes, cloud computing and more. Learn for free.</p>
 							<ul class="actions special">
@@ -144,7 +145,7 @@
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pico.jpg" alt="" /></span>
+							<span class="image fit"><img src="https://dd3q6y43lte2b.cloudfront.net/images/pico.jpg" alt="" /></span>
 							<h3>My Blog</h3>
 							<p>With Project Ideas, Tutorials, and opinions on tech and developments.</p>
 							<ul class="actions special">
@@ -466,21 +467,21 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<h5>Fit</h5>
 						<div class="box alt">
 							<div class="row gtr-uniform gtr-50">
-								<div class="col-12"><span class="image fit"><img src="images/pic06.jpg" alt="" /></span></div>
-								<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-								<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-								<div class="col-4"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-								<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-								<div class="col-4"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-								<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-								<div class="col-4"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-								<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-								<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
+								<div class="col-12"><span class="image fit"><img src="https://dd3q6y43lte2b.cloudfront.net/images/pic06.jpg" alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img src="https://dd3q6y43lte2b.cloudfront.net/images/pic02.jpg" alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img src="https://dd3q6y43lte2b.cloudfront.net/images/pic03.jpg" alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img src="https://dd3q6y43lte2b.cloudfront.net/images/pic04.jpg" alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img src="https://dd3q6y43lte2b.cloudfront.net/images/pic03.jpg" alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img src="https://dd3q6y43lte2b.cloudfront.net/images/pic04.jpg" alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img src="https://dd3q6y43lte2b.cloudfront.net/images/pic02.jpg" alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img src="https://dd3q6y43lte2b.cloudfront.net/images/pic04.jpg" alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img src="https://dd3q6y43lte2b.cloudfront.net/images/pic02.jpg" alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img src="https://dd3q6y43lte2b.cloudfront.net/images/pic03.jpg" alt="" /></span></div>
 							</div>
 						</div>
 						<h5>Left &amp; Right</h5>
-						<p><span class="image left"><img src="images/pic05.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
-						<p><span class="image right"><img src="images/pic05.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
+						<p><span class="image left"><img src="https://dd3q6y43lte2b.cloudfront.net/images/pic05.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
+						<p><span class="image right"><img src="https://dd3q6y43lte2b.cloudfront.net/images/pic05.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
 					</section>
 
 				</div>
@@ -512,12 +513,12 @@ Goldie is based on the Go Gopher, created by Renee French, which is also license
 			</section>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="https://dd3q6y43lte2b.cloudfront.net/assets/js/jquery.min.js"></script>
+			<script src="https://dd3q6y43lte2b.cloudfront.net/assets/js/jquery.scrolly.min.js"></script>
+			<script src="https://dd3q6y43lte2b.cloudfront.net/assets/js/browser.min.js"></script>
+			<script src="https://dd3q6y43lte2b.cloudfront.net/assets/js/breakpoints.min.js"></script>
+			<script src="https://dd3q6y43lte2b.cloudfront.net/assets/js/util.js"></script>
+			<script src="https://dd3q6y43lte2b.cloudfront.net/assets/js/main.js"></script>
 
 	</body>
 </html>
